# localboard

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/localboard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/localboard/: ILlamaCallback.aidl  ILlamaService.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/localboard/: LlamaInferenceService.kt  LocalboardKeyboardService.kt  MainActivity.kt
app/src/main/java/com/example/localboard/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: method.xml
app/src/test/java/com/example/localboard/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
